--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 header {
 	color: white;
-	background-image: url("header.jpg");
+	background-image: url("Piscine_terasse.jpg");
 	background-size: cover;
 	height: 300px;
 }
